syntax = "proto3";
package server_streaming;

service PaymentService {
    rpc ProcessPayment(PaymentRequest) returns (PaymentResponse) {}
}

message PaymentRequest {
  string customer_id = 1;
  string amount = 2;
  string currency = 3;
}

enum PaymentStatus {
    SUCCESS = 0;
    FAILED = 1;
}

message PaymentResponse {
    string transaction_id = 1;
    PaymentStatus status = 2;
    string message = 3;
}